# rtiaw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  camera.h  color.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  ray.cpp  ray.h  sphere.cpp  sphere.h  util.h  vec3.cpp  vec3.h
src/: camera.h  color.h  hittable.h  hittable_list.cpp  hittable_list.h  main.cpp  material.h  ray.cpp  ray.h  sphere.cpp  sphere.h  util.h
